@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2022,v 1.1858 2022/04/15 12:41:14 schwarz Exp $
+$NetBSD: CHANGES-2022,v 1.1859 2022/04/15 12:43:32 schwarz Exp $
 
 Changes to the packages collection and infrastructure in 2022:
 
@@ -2830,3 +2830,4 @@ Changes to the packages collection and infrastructure in 2022:
 	Removed devel/go-jwt-go [nikita 2022-04-15]
 	Removed databases/go-tiedot [nikita 2022-04-15]
 	Updated devel/libosip to 5.3.0 [schwarz 2022-04-15]
+	Updated net/libexosip to 5.3.0 [schwarz 2022-04-15]
